start gunicorn with settings in compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,13 @@
 version: '3'
 services:
-  thisfastapiservice:
-    build: .
+  simiscore-kshingle:
+    build:   # build using Dockfile in this directory
+      context: .
+      dockerfile: Dockerfile
+    command: sh -c "gunicorn app.main:app 
+                      --bind 0.0.0.0:80 
+                      --worker-class uvicorn.workers.UvicornH11Worker 
+                      --workers ${NUM_WORKERS}
+                      --worker-tmp-dir /dev/shm"
     ports:
-      - "12345:80"
-  #otherservice:
-  #  image: "dockername:version"
+      - "${API_PORT}:80"
