adjust docker config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3'
 services:
-  simiscore-kshingle:
+  simiscore-syntax:
+    image: evidence-simiscore-kshingle
     build:   # build using Dockfile in this directory
       context: .
       dockerfile: Dockerfile
-    command: sh -c "gunicorn app.main:app 
-                      --bind 0.0.0.0:80 
-                      --worker-class uvicorn.workers.UvicornH11Worker 
-                      --workers ${NUM_WORKERS}
-                      --worker-tmp-dir /dev/shm"
+    environment:
+      # Fastapi/gunicorn settings, see https://github.com/tiangolo/uvicorn-gunicorn-docker/tree/master#workers_per_core
+      - "WORKERS_PER_CORE=0.5"
+      # - "MAX_WORKERS=2"
     ports:
       - "${API_PORT}:80"
